<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration_Page"
    tools:ignore="SpeakableTextPresentCheck">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="100dp"
            android:backgroundTint="#69F16F"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:paddingTop="5dp"
                android:paddingRight="30dp"
                android:paddingBottom="5dp"
                android:text="@string/registration"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            app:cardCornerRadius="20dp"
            android:backgroundTint="@color/white"
            android:layout_marginTop="50dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:padding="20dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="30dp"
                        android:paddingTop="5dp"
                        android:paddingRight="30dp"
                        android:textColor="@color/black"
                        android:paddingBottom="5dp"
                        android:text="@string/email"
                        android:textSize="17sp"/>

                    <EditText
                        android:id="@+id/email_r"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="30dp"
                        android:paddingTop="5dp"
                        android:paddingRight="30dp"
                        android:paddingBottom="5dp"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        tools:ignore="Autofill,TextContrastCheck,TouchTargetSizeCheck" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:padding="20dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="30dp"
                        android:paddingTop="5dp"
                        android:paddingRight="30dp"
                        android:paddingBottom="5dp"
                        android:textColor="@color/black"
                        android:text="@string/password"
                        android:textSize="17sp"/>

                    <EditText
                        android:id="@+id/password_r"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingLeft="30dp"
                        android:paddingTop="5dp"
                        android:paddingRight="30dp"
                        android:paddingBottom="5dp"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        tools:ignore="Autofill,DuplicateSpeakableTextCheck,TextContrastCheck,TouchTargetSizeCheck" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:padding="20dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/confirm_password"
                        android:textColor="@color/black"
                        android:textSize="17sp"/>

                    <EditText
                        android:id="@+id/cpassword_r"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password_hint"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        tools:ignore="Autofill,TextContrastCheck,TouchTargetSizeCheck" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:padding="20dp"
                    >

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="registrationProcess"
                        android:text="@string/register"
                        tools:ignore="TextContrastCheck" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note"
            android:textColor="@color/black"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/registration_guide"
            android:layout_marginBottom="200dp"
            />
    </LinearLayout>


</ScrollView>