<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            android:backgroundTint="#4FD855"
            app:cardCornerRadius="7dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/appName"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:onClick="logoutProcess"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <androidx.cardview.widget.CardView
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                android:gravity="center"
                android:layout_margin="10dp"
                android:backgroundTint="@color/white"
                app:cardElevation="10dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="@string/height"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="20dp"
                            android:textColor="@color/black"
                            android:text="@string/feet" />

                        <EditText
                            android:id="@+id/feet"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:autofillHints=""
                            android:gravity="center"
                            android:hint="0"
                            android:textColor="@color/black"
                            android:inputType="number"
                            android:padding="10dp"
                            android:textSize="25sp"
                            tools:ignore="HardcodedText,TouchTargetSizeCheck,TextContrastCheck" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="20dp"
                            android:textColor="@color/black"
                            android:text="@string/inch" />

                        <EditText
                            android:id="@+id/inch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:autofillHints=""
                            android:gravity="center"
                            android:hint="0"
                            android:textColor="@color/black"
                            android:inputType="number"
                            android:padding="10dp"
                            android:textSize="25sp"
                            tools:ignore="HardcodedText,TouchTargetSizeCheck,TextContrastCheck" />
                    </LinearLayout>


                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                android:gravity="center"
                android:layout_margin="10dp"
                android:backgroundTint="@color/white"
                android:layout_marginStart="40sp"
                app:cardElevation="10dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weight"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_marginBottom="20dp"
                        android:textSize="20sp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="0"
                        android:inputType="number"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        tools:ignore="HardcodedText,TouchTargetSizeCheck,TextContrastCheck"
                        android:autofillHints="" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kg"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_marginBottom="20dp"
                        android:textSize="17sp"/>
                </LinearLayout>


                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                android:gravity="center"
                android:layout_margin="10dp"
                android:backgroundTint="@color/white"
                android:layout_marginStart="40sp"
                app:cardElevation="10dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/age"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_marginBottom="20dp"
                        android:textSize="20sp"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <EditText
                            android:id="@+id/weight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:hint="0"
                            android:inputType="number"
                            android:textColor="@color/black"
                            android:textSize="25sp"
                            tools:ignore="HardcodedText,TouchTargetSizeCheck,TextContrastCheck"
                            android:autofillHints="" />
                    </LinearLayout>


                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="20dp"
            >
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                android:layout_margin="10dp"
                android:backgroundTint="@color/white"
                app:cardElevation="10dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/result"
                        android:textColor="@color/primary_color"
                        android:textStyle="bold"
                        android:layout_marginBottom="20dp"
                        android:textSize="20sp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bmi"
                            android:layout_gravity="start"
                            android:textSize="12sp"
                            android:textColor="@color/black"
                            android:padding="20dp"/>

                        <TextView
                            android:id="@+id/result"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bmi_result_num"
                            android:layout_gravity="center"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:padding="20dp"/>
                    </LinearLayout>


                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="20dp"
            android:backgroundTint="@color/white"
            app:cardElevation="10dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/health"
                    android:textColor="@color/primary_color"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />
                <TextView
                    android:id="@+id/health"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/dash"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />



            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="40dp"
            app:cardCornerRadius="20dp"
            android:backgroundTint="@color/white"
            app:cardElevation="10dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:contentDescription="@string/app_name"
                    android:onClick="resultProcess"
                    android:src="@drawable/click_icon"
                    tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>


</ScrollView>